<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:baselineAligned="true">

                <TextView
                    android:id="@+id/instructions_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/instructions_fragment_instructions_title"
                    android:textSize="20sp"
                    android:gravity="center"

                    android:textColor="@android:color/black" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/distanceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_done"
                    app:backgroundTint="@android:color/black"
                    android:gravity="right"
                    android:visibility="gone"

                    android:clickable="false"
                    />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/centrer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/test"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@android:color/black" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/centerDistanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:backgroundTint="@android:color/black"
                android:gravity="right"
                android:visibility="gone"
                android:clickable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right"
                app:backgroundTint="@android:color/darker_gray"
                android:clickable="false"
                />

            <TextView
                android:id="@+id/nextButton_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/instructions_fragment_instructions_arrow_button_text"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@android:color/black" />

        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
