<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/currentDistance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/currentDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/switch1"
        android:visibility="invisible"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/showMiddlePoint"
        android:checked="true"
        android:onClick="onShowMiddlePoint"
        android:layout_above="@+id/resetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <Switch
        android:id="@+id/switch2"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:text="@string/showEyePoints"
        android:checked="false"
        android:onClick="onShowEyePoints"
        android:layout_above="@+id/switch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/upleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="225"
                android:onClick="pressedC"


                />

            <ImageView
                android:id="@+id/upmiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="270"
                android:onClick="pressedC"


                />

            <ImageView
                android:id="@+id/upright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="315"
                android:onClick="pressedC"


                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/middleleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="180"
                android:onClick="pressedC"


                />

            <ImageView
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c"
                android:layout_weight="1"
                android:onClick="pressedC"


                />

            <ImageView
                android:id="@+id/middleright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:onClick="pressedC"


                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/downleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="135"
                android:onClick="pressedC"


                />

            <ImageView
                android:id="@+id/downmiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="90"
                android:onClick="pressedC"


                />

            <ImageView
                android:id="@+id/downright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/c_button"
                android:layout_weight="1"
                android:rotation="45"
                android:onClick="pressedC"


                />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>